# FFmpegPlayer

./: gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/feng/ffmpegplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FFDecode.cpp  FFDecode.h  FFDemux.cpp  FFDemux.h  FFPlayerBuilder.cpp  FFPlayerBuilder.h  FFResample.cpp  FFResample.h  GLVideoView.cpp  GLVideoView.h  IAudioPlay.cpp  IAudioPlay.h  IDecode.cpp  IDecode.h  IDemux.cpp  IDemux.h  IObserver.cpp  IObserver.h  IPlayer.cpp  IPlayer.h  IPlayerBuilder.cpp  IPlayerBuilder.h  IPlayerProxy.cpp  IPlayerProxy.h  IResample.cpp  IResample.h  IVideoView.cpp  IVideoView.h  LogCommon.h  SLAudioPlay.cpp  SLAudioPlay.h  XData.cpp  XData.h  XEGL.cpp  XEGL.h  XParameter.cpp  XParameter.h  XShader.cpp  XShader.h  (+7 more)
app/src/main/java/com/feng/ffmpegplayer/: MainActivity.java  XPlay.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/feng/ffmpegplayer/: ExampleUnitTest.java
gldemo/: build.gradle
gldemo/src/main/: AndroidManifest.xml
gldemo/src/main/cpp/: CMakeLists.txt  LogCommon.h  native-lib.cpp
gldemo/src/main/java/com/feng/opengldemo/: MainActivity.java  XPlay.java
gldemo/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
